testdata/valid/internal/handler/dto/user_dto.go
package dto

type UserResponse struct {
	ID   string
	Name string
}
