testdata/invalid/internal/domain/user/dto.go
package user

type UserDTO struct{ ID string }
